gitops/apps/overlays/t21-rolling-update/virtualservice-no-subset.yaml
# T21 — VS sem subset para o tráfego alcançar Pods v1 e v2 durante o rolling update
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: request-stress
  namespace: mercantil-mesh
  annotations:
    mercantil.io/test-case: T21
spec:
  hosts:
    - request-stress.mercantil-mesh.svc.cluster.local
  http:
    - name: primary
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,refused-stream
      timeout: 8s
      route:
        - destination:
            host: request-stress.mercantil-mesh.svc.cluster.local
            port:
              number: 3000
          weight: 100
